@@ -843,6 +843,7 @@ InsetText::LocalDispatch(BufferView * bv,
 	result = moveRight(bv);
 	bv->text->FinishUndo();
 	TEXT(bv)->ClearSelection();
+	TEXT(bv)->sel_cursor = TEXT(bv)->cursor;
 	UpdateLocal(bv, CURSOR, false);
 	break;
     case LFUN_LEFTSEL:
@@ -1259,24 +1260,24 @@ InsetText::moveLeft(BufferView * bv, bool activate_inset, bool selecting)
 
 UpdatableInset::RESULT
 InsetText::moveRightIntern(BufferView * bv, bool behind, 
-			   bool activate_inset, bool selecting)
+			   bool activate_inset, bool /*selecting*/)
 {
     if (!cpar(bv)->next && (cpos(bv) >= cpar(bv)->Last()))
 	return FINISHED;
     if (activate_inset && checkAndActivateInset(bv, behind))
 	return DISPATCHED;
-    TEXT(bv)->CursorRight(bv, selecting);
+    TEXT(bv)->CursorRight(bv);
     return DISPATCHED_NOUPDATE;
 }
 
 
 UpdatableInset::RESULT
 InsetText::moveLeftIntern(BufferView * bv, bool behind,
-			  bool activate_inset, bool selecting)
+			  bool activate_inset, bool /*selecting*/)
 {
     if (!cpar(bv)->previous && (cpos(bv) <= 0))
 	return FINISHED;
-    TEXT(bv)->CursorLeft(bv, selecting);
+    TEXT(bv)->CursorLeft(bv);
     if (activate_inset && checkAndActivateInset(bv, behind))
 	return DISPATCHED;
     return DISPATCHED_NOUPDATE;
